@@ -3,6 +3,7 @@
 
 Client library:
 - Fix support for Python 2.6, 3.0, 3.1.
+- Add support for un/subscribing to multiple topics at once in un/subscribe().
 
 
 1.2 - 20130708
